# Distributed-Web-Scrapper-and-Crawler-C-

./: CMakeLists.txt  COMPATIBILITY.md  Dockerfile  Dockerfile.worker  MINGW_TROUBLESHOOTING.md  Makefile  Makefile.distributed  Makefile.win  README.md  books.csv  build_msvc.bat  docker-compose.yml  frontend.html  items.csv  railway.toml  render.yaml  run_distributed.bat  test_socket.bat
.github/workflows/: deploy-workers.yml
include/: Book.h  Crawler.h  HtmlParser.h  HttpClient.h  Item.h  compat.h  config.h
src/: Crawler.cpp  HtmlParser.cpp  HttpClient.cpp  main.cpp  minimal_server.cpp  minimal_worker.cpp  server.cpp  test_socket.cpp  worker.cpp
test_build/: socket_test.cpp  thread_test.cpp
